--- a/style.css
+++ b/style.css
@@ -5,17 +5,29 @@
   margin: 0;
   box-sizing: border-box;
 }
-h1,h2,h3,h4,h5,h6,span {
+html{
+  scroll-behavior: smooth;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span {
   color: cadetblue;
   text-align: center;
   line-height: 1.25;
 }
-h1{
-    font-size: 36px;
+h1 {
+  font-size: 36px;
 }
 p {
   line-height: 1.5;
   font-size: 16px;
+}
+a{
+  text-decoration: none;
 }
 li {
   list-style-type: none;
@@ -26,13 +38,23 @@ li {
 .flex-1 {
   flex: 1;
 }
+.container {
+  padding: 50px 0;
+}
 .row {
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
 }
-.text--blue{
-    color: cadetblue;
+.text--blue {
+  color: cadetblue;
+}
+/* every second section will be this color */
+section:nth-child(even) {
+  background-color: rgba(209, 206, 206, 0.7);
+}
+.section__title {
+  margin-bottom: 20px;
 }
 /* Navigation bar */
 nav {
@@ -77,9 +99,9 @@ nav {
   display: flex;
   flex-direction: column;
 }
-.about-me__info{
-    display:flex;
-    flex-direction: column;
+.about-me__info {
+  display: flex;
+  flex-direction: column;
 }
 .about-me__info--container {
   display: flex;
@@ -90,37 +112,193 @@ nav {
   margin: 0 auto;
   text-align: center;
 }
-.about-me__picture--mask{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    overflow: hidden;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.16);
-    margin-bottom:28px;
+.about-me__picture--mask {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
+  margin-bottom: 28px;
 }
-.about-me__picture{
-    width:100%;
-    transform:scale(1.9);
-    padding-top:17px;
+.about-me__picture {
+  width: 100%;
+  transform: scale(1.9);
+  padding-top: 17px;
 }
-.about-me__info--title{
-    margin-bottom: 16px;
+.about-me__info--title {
+  margin-bottom: 16px;
 }
-.about-me__info--para{
-    font-size: 20px;
-    margin-bottom: 28px;
+.about-me__info--para {
+  font-size: 20px;
+  margin-bottom: 28px;
 }
-.about-me__link{
-    font-size: 20px;
-    color:rgb(96, 157, 159);
-    text-decoration: none;
-    padding: 0 16px;
+.about-me__link {
+  font-size: 20px;
+  color: rgb(96, 157, 159);
+  text-decoration: none;
+  padding: 0 16px;
 }
-.about-me__img--container{
-    flex:1;
-    display: flex;
-    align-items: center;
+.about-me__img--container {
+  flex: 1;
+  display: flex;
+  align-items: center;
 }
-.about-me__img{
-    width:100%;
+.about-me__img {
+  width: 100%;
+}
+/* Tech STACK */
+.language {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+.language__img {
+  width: 100%;
+  max-width: 100px;
+  transition: all 300ms ease;
+}
+.language:hover.language__img {
+  filter: brightness(80%);
+  opacity: 0.86;
+  transform: scale(0.9);
+}
+.language__img--wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 16px;
+}
+.language__list {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+.language__name {
+  position: absolute;
+  bottom: 0;
+  transform: scale(0);
+  transition: all 300ms ease;
+  font-size: 20px;
+  opacity: 0;
+}
+.language:hover .language__name {
+  transform: scale(1);
+  opacity: 1;
+}
+/* Project section */
+.project{
+  margin-bottom:135px;
+}
+.project:last-child{
+  margin-bottom: 40px;
+}
+.project__img {
+  width: 100%;
+  transition: all 500ms ease;
+}
+.project__wrapper {
+  box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+}
+/* overlay and zoom */
+.project__wrapper:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: cadetblue;
+  opacity: 0;
+  transition:  450ms ease;
+  z-index: 2;
+}
+.project:hover .project__wrapper {
+  opacity: 0.7;
+}
+.project:hover.project__img {
+  transform: scale(1.07);
+  filter: blur(5px);
+}
+/* make the text appear when hover */
+.project:hover .project__description{
+  opacity:1;
+  transform:translateY(-50%)
+}
+.project__list {
+  padding-top: 40px;
+}
+.project__description {
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  transform: translateY(-50%);
+  max-width: 550px;
+  z-index:3;
+  opacity:0;
+  transition: transform 450ms, opacity 300ms;
+}
+.project__description--title{
+  font-size: 40px;
+}
+.project__description--para{
+  font-size: 10px;
+  margin-right: 16px;
+}
+.project__description--link{
+  margin-right:16px;
+  text-decoration:none;
+}
+.project__description--title,
+.project__description--sub-title,
+.project__description--para,
+.project__description--link {
+  text-align: left;
+  color: cadetblue;
+}
+/* Footer */
+footer{
+  background-color: rgba(209, 206, 206, 0.7);
+}
+.footer__row{
+  display:flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  padding:8% 0;
+}
+.footer__logo--img{
+  width: 70px;
+  height: 70px;
+}
+.footer__social--list{
+  width:100%;
+  max-width: 500px;
+  display:flex;
+  justify-content: space-around;
+  margin-bottom:28px;
+}
+.footer__social--link,
+.footer__copyright{
+  color:white;
+}
+.footer__logo--popup{
+position: absolute;
+right:0;
+top: 30px;
+font-weight:700;
+opacity:0;
+transition: all 300ms ease;
+}
+.footer__anchor{
+  margin-bottom: 20px;
+position: relative;
+}
+/* when hover logo Top will pop out */
+.footer__anchor:hover .footer__logo--popup{
+transform: translateX(60px);
+opacity:1
 }
