--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   margin: 0;
   box-sizing: border-box;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
 h1,
@@ -26,8 +26,33 @@ p {
   line-height: 1.5;
   font-size: 16px;
 }
-a{
+a {
   text-decoration: none;
+  position: relative;
+  transition: opacity 300ms ease;
+}
+i:hover{
+  opacity:0.7;
+}
+/* creates underline effect on links */
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background-color: cadetblue;
+  width: 0%;
+  bottom: -3px;
+  right: 0;
+  transition: all 300ms ease;
+}
+/* when mouse hovers over */
+.link__hover-effect:hover:after{
+width:100%;
+left:0;
+}
+/* adds different color to the footer links */
+.link__hover-effect--white:after{
+background-color: cadetblue
 }
 li {
   list-style-type: none;
@@ -45,6 +70,7 @@ li {
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
+  padding:0 12px;
 }
 .text--blue {
   color: cadetblue;
@@ -65,6 +91,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding:0 12px;
 }
 .nav__link--list {
   display: flex;
@@ -119,6 +146,19 @@ nav {
   overflow: hidden;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
   margin-bottom: 28px;
+  animation: animate-profile-picture 800ms 200ms backwards;
+}
+/* Animations for Profile picture*/
+@keyframes animate-profile-picture{
+  0%{
+    transform: scale(0);
+  }
+  80%{
+    transform:scale(1.1)
+  }
+  100%{
+    transform: scale(1);
+  }
 }
 .about-me__picture {
   width: 100%;
@@ -127,16 +167,32 @@ nav {
 }
 .about-me__info--title {
   margin-bottom: 16px;
+  animation:fade-up 650ms 400ms backwards;
 }
 .about-me__info--para {
   font-size: 20px;
   margin-bottom: 28px;
+  animation:fade-up 650ms 600ms backwards;
 }
 .about-me__link {
   font-size: 20px;
   color: rgb(96, 157, 159);
   text-decoration: none;
   padding: 0 16px;
+}
+.about-me__links{
+  animation:fade-up 650ms 800ms backwards;
+}
+/* Animations for text  */
+@keyframes fade-up{
+  0%{
+    opacity:0;
+    transform:translateY(40px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 .about-me__img--container {
   flex: 1;
@@ -145,6 +201,30 @@ nav {
 }
 .about-me__img {
   width: 100%;
+  animation: fade-in 1200ms 800ms backwards;
+}
+@keyframes fade-in{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity:1;
+  }
+}
+.wave{
+  display: inline-block;
+  animation: animate-wave 500ms infinite ease-in-out;
+}
+@keyframes animate-wave{
+  0%{
+    transform: rotate(0);
+  }
+  50%{
+    transform: rotate(30deg);
+  }
+  100%{
+    transform: rotate(0);
+  }
 }
 /* Tech STACK */
 .language {
@@ -171,6 +251,7 @@ nav {
 }
 .language__list {
   display: flex;
+  justify-content: center;
   width: 100%;
   flex-wrap: wrap;
 }
@@ -187,10 +268,10 @@ nav {
   opacity: 1;
 }
 /* Project section */
-.project{
-  margin-bottom:135px;
+.project {
+  margin-bottom: 135px;
 }
-.project:last-child{
+.project:last-child {
   margin-bottom: 40px;
 }
 .project__img {
@@ -213,7 +294,7 @@ nav {
   width: 100%;
   background-color: cadetblue;
   opacity: 0;
-  transition:  450ms ease;
+  transition: 450ms ease;
   z-index: 2;
 }
 .project:hover .project__wrapper {
@@ -224,9 +305,9 @@ nav {
   filter: blur(5px);
 }
 /* make the text appear when hover */
-.project:hover .project__description{
-  opacity:1;
-  transform:translateY(-50%)
+.project:hover .project__description {
+  opacity: 1;
+  transform: translateY(-50%);
 }
 .project__list {
   padding-top: 40px;
@@ -237,20 +318,20 @@ nav {
   left: 90px;
   transform: translateY(-50%);
   max-width: 550px;
-  z-index:3;
-  opacity:0;
+  z-index: 3;
+  opacity: 0;
   transition: transform 450ms, opacity 300ms;
 }
-.project__description--title{
+.project__description--title {
   font-size: 40px;
 }
-.project__description--para{
+.project__description--para {
   font-size: 10px;
   margin-right: 16px;
 }
-.project__description--link{
-  margin-right:16px;
-  text-decoration:none;
+.project__description--link {
+  margin-right: 16px;
+  text-decoration: none;
 }
 .project__description--title,
 .project__description--sub-title,
@@ -260,45 +341,95 @@ nav {
   color: cadetblue;
 }
 /* Footer */
-footer{
+footer {
   background-color: rgba(209, 206, 206, 0.7);
 }
-.footer__row{
-  display:flex;
+.footer__row {
+  display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
   justify-content: center;
-  padding:8% 0;
+  padding: 8% 0;
 }
-.footer__logo--img{
+.footer__logo--img {
   width: 70px;
   height: 70px;
 }
-.footer__social--list{
-  width:100%;
+.footer__social--list {
+  width: 100%;
   max-width: 500px;
-  display:flex;
+  display: flex;
   justify-content: space-around;
-  margin-bottom:28px;
+  margin-bottom: 28px;
 }
 .footer__social--link,
-.footer__copyright{
-  color:white;
+.footer__copyright {
+  color: white;
 }
-.footer__logo--popup{
-position: absolute;
-right:0;
-top: 30px;
-font-weight:700;
-opacity:0;
-transition: all 300ms ease;
+.footer__logo--popup {
+  position: absolute;
+  right: 0;
+  top: 30px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all 300ms ease;
 }
-.footer__anchor{
+.footer__anchor {
   margin-bottom: 20px;
-position: relative;
+  position: relative;
 }
 /* when hover logo Top will pop out */
-.footer__anchor:hover .footer__logo--popup{
-transform: translateX(60px);
-opacity:1
+.footer__anchor:hover .footer__logo--popup {
+  transform: translateX(60px);
+  opacity: 1;
+}
+/* This is for Responsiveness for small phones, tablets, large smartphones */
+@media(max-width:768px){
+nav{
+  height:68px;
+}
+h1{
+  font-size: 28px;
+}
+.about-me__info--para{
+  font-size: 18px;
+}
+.language{
+width: calc(100%/3);
+}
+.project__description--para{
+  font-size:14px;
+}
+.project__description{
+  left: 30px;
+  padding-right: 30px;
+}
+}
+@media(max-width:480px){
+  .nav__link:not(:last-child){
+    display:none;
+  }
+  /* align text and titel */
+  .project__description{
+    padding:0;
+    left:0;
+    width:100%;
+  }
+  .project__description--para{
+    display:none;
+  }
+  .project__description--links{
+    display:flex;
+    justify-content: center;
+  }
+  /* Wraps heading of text */
+  .project__description--title{
+    font-size:32px;
+    line-height:1;
+    text-align:center;
+  }
+  .project__description--sub-title{
+    text-align: center;
+    margin: 12px 0;
+  }
 }
